style.css
body {
	margin: 0;
	padding: 0;
}

#container {
	background: #FFFFFF;
	color: #444444;
	font-family: "Montserrat", sans-serif;
	font-size: 16px;
	line-height: 40px;
	width: 95%;
	margin-left: auto;
	margin-right: auto;
	max-width: 850px;
}

a {
	border-bottom: 1px solid #444444;
	color: #444444;
	text-decoration: none;
}

a:hover {
	border-bottom: 0;
}

header {
	text-align: center;
}

header h1 {
	margin: 0;
}

header a {
	color:#787878;
	border-bottom:none;
}

header p {
	font-style: italic;
	color:#787878;
	margin: 0;
	padding: 0;
	margin-top: 2px;
}

header span {
	padding: 5px;
}

h1, h2, h3, h4, h5 {
	margin: 0;
	padding: 0;
	text-align: center;
}

#profile {
	max-width: 280px;
	width: 50%;
	margin-top: 40px;
}

#name {
	font-size: 3em;
	margin-top: 25px;
}


li {
	margin: 20px;
}

hr { 
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin-top: 40px;
    margin-bottom: 40px;
    padding: 0; 
}

p {
	padding: 0;
	margin: 20px 20px 20px 20px;
	line-height: 40px;
}

code {
	display: block;
	text-align: center;
	margin: 60px 0px 60px 0px;
	color: white;
	background-color:#393939;
	font-size: 15pt;
	width: 100%;
}

#blink {
  animation: blinker 1s steps(1) infinite;
  color: white;
  font-weight: bold;
  width: 2px;
  height:20px;
}

@keyframes blinker {  
  50% { opacity: 0; }
}

